Bug 1441145 - Swap width and height in target capability if the frame is rotated. r=jib a=lizzard

MozReview-Commit-ID: 3QO3W0J3b6G

--HG--
extra : source : c672cca7633a7e4a1571a668cf3808b1834a075b
extra : amend_source : 9586947d1e84d0afc6e9c1eb9d2abf944ec95e89